--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body {
     background: var(--col-primary, #242a48);
     background-image: linear-gradient(-12deg,var(--col-primary),98%,var(--col-highlight));
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    scrollbar-color: var(--col-lowlight) transparent;
+    scrollbar-color: var(--col-lowlight) var(--col-secondary);
     scrollbar-width: thin
 }
 
