--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -34,7 +34,7 @@
                     <li>HTML5</li>
                     <li>PHP</li>
                     <li>CSS</li>
-                    <li>SASS</li>
+                    <li>Sass</li>
                     <li>JS</li>
                     <li>jQuery</li>
                     <li>Vue</li>
@@ -46,7 +46,7 @@
                     <li>UX</li>
                     <li>Responsive&nbsp;Design</li>
                     <li>Typography</li>
-                    <li>Wire&nbsp;Frames</li>							
+                    <li>Wireframes</li>							
                     <li>Hand&nbsp;Coding</li>
                     <li>Accessibility</li>
                     <li>Cross-browser&nbsp;Compatibility</li>
