--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -20,15 +20,12 @@
     }
 }
 
-.wrap-content,.wrap-content>article,.grid--primarycol {
-    grid-gap: 1.5rem;
-    gap: 1.5rem
-}
-
 .grid--primarycol {
     display: grid;
     grid-column: 1/span 2;
-    grid-template-columns: 2fr 7fr
+    grid-template-columns: 2fr 7fr;
+    grid-gap: 1.5rem;
+    gap: 1.5rem
 }
 
 @media only screen and (min-width:900px) {
