--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         {% include header.html %}
 
         <main id="content" class="wrap-content">
-            <article>
+            <article class="h-entry">
                 
                 <h1>{{ page.title }}</h1>
 
