--- a/_includes/postinfo.html
+++ b/_includes/postinfo.html
@@ -1,6 +1,6 @@
 {% if page.date %}
-<p><small>Posted <time datetime="{{ page.date }}">{{ page.date | date: "%d/%m/%Y" }}</time></small></p>
+<p><small>Posted <time class="dt-published" datetime="{{ page.date }}">{{ page.date | date: "%d/%m/%Y" }}</time></small></p>
 {% endif %}
 <footer>
-    <p class="invisible" aria-hidden="true"><small>&lsquo;{{ page.title }}&rsquo; published by Paul Foster (<a href="{{ page.url }}" rel="author">www.paulfosterdesign.co.uk</a>), a web designer / front-end developer, based in Cambridgeshire, UK.</small></p>
+    <p class="invisible" aria-hidden="true"><small>&lsquo;<span class="p-name">{{ page.title }}</span>&rsquo; published by <span class="p-author">Paul Foster</span> (<a href="{{ page.url }}" class="u-url" rel="author">www.paulfosterdesign.co.uk</a>), a web designer / front-end developer, based in Cambridgeshire, UK.</small></p>
 </footer>
