--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -24,10 +24,16 @@
             <aside class="largeonly" role="complementary">
 
                 <h2>Skills</h2>
+                
+                <h3>Design</h3>
                 <ul class="list--nostyles list--cvskills">
-                    <li>Photoshop</li>
-                    <li>Fireworks</li>
                     <li>Sketch</li>
+                    <li>Photoshop</li>
+                    <li>Fireworks</li>                        
+                </ul>
+
+                <h3>Development</h3>
+                <ul class="list--nostyles list--cvskills">                        
                     <li>SVG</li>
                     <li>HTML</li>
                     <li>XHTML</li>
@@ -35,27 +41,28 @@
                     <li>PHP</li>
                     <li>CSS</li>
                     <li>Sass</li>
-                    <li>JS</li>
                     <li>jQuery</li>
-                    <li>Vue</li>
+                    <li>JS</li>
                     <li>Markdown</li>
                     <li>WordPress</li>
-                    <li>Kirby&shy;CMS</li>
+                    <li>Kirby</li>
                     <li>Jekyll</li>
-                    <li>Tumblr</li>
-                    <li>UX</li>
-                    <li>Responsive&nbsp;Design</li>
-                    <li>Typography</li>
-                    <li>Wireframes</li>							
-                    <li>Hand&nbsp;Coding</li>
+                    <li>Tumblr</li>                                               
+                </ul>
+
+                <h3>Decisions</h3>
+                <ul class="list--nostyles list--cvskills">
                     <li>Accessibility</li>
                     <li>Cross-browser&nbsp;Compatibility</li>
                     <li>W3C&nbsp;Validation</li>
+                    <li>Responsive&nbsp;Design</li>
+                    <li>UX</li>
+                    <li>Typography</li>
+                    <li>Wire&nbsp;Frames</li>							
+                    <li>Hand&nbsp;Coding</li>                    
+                    <li><abbr title="User Acceptance Testing">UAT</abbr></li>
                     <li>Version&nbsp;Control</li>
-                    <li>Email&nbsp;Design</li>
-                    <li>Image&nbsp;Optimisation</li>
                     <li>SEO</li>
-                    <li><abbr title="User Acceptance Testing">UAT</abbr></li>                        
                 </ul>
                                                 
             </aside>
