--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@
 
         <main id="content" class="wrap-content" role="main">
 	
-            <article class="grid--primarycol">
+            <article class="wrap-all">
             	
                 <div class="grid--projects">
                     
@@ -39,7 +39,7 @@
         
                 </div>
 
-                <section class="grid--primarycol">
+                <section class="wrap-content wrap-all">
                     <div>
                         <h2>My Work</h2>
                         <p><strong>Web, UI, Graphics, Print.</strong></p>
