--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -1,5 +1,17 @@
+h1, h2, p {
+	margin: 0 0 1.5rem;
+}
+
 .wrap-content {
-    grid-column: 1/span 2
+	grid-column: 1/span 2;
+    grid-row: auto;
+    margin-top: 0;
+}
+
+.wrap-all {
+    width: 100%;
+    grid-row-gap: 1.5rem;
+    row-gap: 1.5rem;
 }
 
 .grid--projects {
@@ -9,29 +21,13 @@
     grid-template-rows: 1fr;
     grid-gap: 1rem;
     gap: 1rem;
-    padding-top: 2rem
 }
-
 @media only screen and (min-width:1050px) {
     .grid--projects {
         grid-gap: 2.5rem;
         gap: 2.5rem;
-        margin: 0 -1.26rem
-    }
-}
-
-.grid--primarycol {
-    display: grid;
-    grid-column: 1/span 2;
-    grid-template-columns: 2fr 7fr;
-    grid-gap: 1.5rem;
-    gap: 1.5rem
-}
-
-@media only screen and (min-width:900px) {
-    .grid--primarycol {
-        grid-template-columns: 1fr 700px;
-        grid-template-columns: 1fr minmax(2fr,700px)
+        margin-left: -1.26rem;
+        margin-right: -1.26rem;
     }
 }
 
