--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,6 +326,11 @@ dt {
     }
 }
 
+h2 em, h3 em {
+    font-size: .875em;
+    font-family: var(--font-body);
+}
+
 .list--cvskills {
     content-visibility: auto;
 }
