--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,11 +18,13 @@
     
     <section>
         <h2>Posts</h2>
-        <ul class="list--nostyles h3">
-            {% for blogpost in site.posts limit:3 %}
-            <li><a href="{{ blogpost.url }}">{{ blogpost.title }}</a></li>
-            {% endfor %}
-        </ul>
+        <nav role="navigation">
+            <ul class="list--nostyles h3">
+                {% for blogpost in site.posts limit:3 %}
+                <li><a href="{{ blogpost.url }}">{{ blogpost.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </nav>
         <p><a href="/blog/">All Posts</a></p>
     </section>
 
