--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="flex--row flex--spacebetween">
 			
     <nav class="flex--fifty">
-        <ul class="list--nostyles list--inline list--spacebetween">
+        <ul class="list--nostyles flex--row flex--spacebetween">
             <li class="flex--auto"><a class="link-nav" href="/work/">Work</a></li>
             <li class="flex--auto"><a class="link-nav" href="/blog/">Blog</a></li>
             <li class="flex--auto"><a class="link-nav" href="/about/">About</a></li>
