--- a/_includes/socialicons.html
+++ b/_includes/socialicons.html
@@ -1,6 +1,6 @@
 <div id="socialicons">
 
-    <ul class="list--nostyles list--inline">
+    <ul class="list--nostyles flex--row">
         <li>
             <a href="https://twitter.com/plfstr/" rel="me">
                 <svg role="img" class="icon icon--twitter"><use xlink:href="/assets/images/icons-social.svg#icon--twitter" viewBox="0 0 1024 1024"></use><title>Twitter</title></svg>
