--- a/assets/css/style-layout.css
+++ b/assets/css/style-layout.css
@@ -133,7 +133,7 @@ h1:before {
 	max-width: none;
 }
 
-.wrap-cards .h2 {
+.wrap-cards .wrap-preview--title {
 	font-size: 1.85rem;
 	line-height: 1;
 	word-break: break-word;
