--- a/assets/css/style-layout.css
+++ b/assets/css/style-layout.css
@@ -4,7 +4,7 @@ body {
     background-image: linear-gradient(-12deg,var(--col-primary),85%,var(--col-highlight))
 }
 
-h1,h2,h3 {
+h1,h2 {
     font-family: var(--font-slab, sans-serif);
     text-transform: uppercase
 }
