--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -6,8 +6,8 @@
 {% feed_meta %}
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/assets/images/pfd-favicon.svg" sizes="any" type="image/svg+xml">
-<link rel="icon" href="/assets/images/pfd-webclip-196x196.png" sizes="196x196">
-<link rel="icon" href="/assets/images/pfd-webclip-128x128.png" sizes="128x128">
+<link rel="icon" href="/assets/images/pfd-webclip-196x196.jpg" sizes="196x196">
+<link rel="icon" href="/assets/images/pfd-webclip-128x128.jpg" sizes="128x128">
 <meta name="theme-color" content="#98fdff">
 <meta name="apple-mobile-web-app-title" content="Paul Foster">
 <meta name="application-name" content="Paul Foster Portfolio">
