--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
-<title>{{ page.title }} | {{ site.url }}</title>
+<title>{{ page.title }} - paulfosterdesign.co.uk</title>
 <link rel="stylesheet" href="/assets/css/style.css">
 <link rel="stylesheet" href="/assets/css/style-layout.css" media="only screen and (min-width: 800px)">
 {% feed_meta %}
@@ -17,7 +17,7 @@
 {% else %}
 <meta property="og:description" content="{{ page.excerpt | strip_html }}">
 {% endif %}
-<meta property="og:title" content="{{ page.title }} | {{ site.url }}">
+<meta property="og:title" content="{{ page.title }} - paulfosterdesign.co.uk">
 <meta property="og:type" content="website">
 <meta property="og:url" content="{{ page.url }}">
 <meta property="og:site-name" content="{{ site.url }}">
