--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,7 @@
                     <a href="/work/blackandwhitesquares/">
                         <picture class="figure__featimg" >
                             <source srcset="/assets/images/baws.jpg" media="(min-width: 480px) and (max-width: 800px)">
+                                <source srcset="/assets/images/baws.webp" type="image/webp">
                             <img src="/assets/images/baws.thumb.jpg" width="320" height="220" alt="blackandwhitesquares.com" loading="eager">
                         </picture>
                     </a>
@@ -26,6 +27,7 @@
                     <a href="/work/print-theme/">
                         <picture class="figure__featimg">
                             <source srcset="/assets/images/printtheme.png" media="(min-width: 480px) and (max-width: 800px)">
+                            <source srcset="/assets/images/printtheme.webp" type="image/webp">
                             <img src="/assets/images/printtheme.thumb.jpg" width="320" height="220" alt="Print Theme" loading="eager">
                         </picture>
                     </a>
@@ -33,6 +35,7 @@
                     <a href="/work/nintendo-hub/">
                         <picture class="figure__featimg">
                             <source srcset="/assets/images/nintendohub.jpg" media="(min-width: 480px) and (max-width: 800px)">
+                            <source srcset="/assets/images/nintendohub.webp" type="image/webp">
                             <img src="/assets/images/nintendohub.thumb.jpg" width="320" height="220" alt="Nintendo Hub" loading="eager">
                         </picture>
                     </a>
