--- a/assets/css/style-layout.css
+++ b/assets/css/style-layout.css
@@ -20,6 +20,14 @@ h1:before {
     }
 }
 
+blockquote {
+    margin-left: 0;
+    padding-left: 4.5rem;
+    border: 0;
+    background: url(/assets/images/blockquote.svg) 0 .25em no-repeat;
+    background-size: 4rem
+}
+
 .wrap-banner--pfd {
     display: block
 }
