--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,7 +337,7 @@ h2 em, h3 em {
 
 .list--cvskills {
     content-visibility: auto;
-    contain-intrinsic-size: 100px;
+    contain-intrinsic-size: 5rem;
 }
 
 .list--cvskills li {
