--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -32,7 +32,7 @@
     }
 
     if(readCookie('cookie-notice-dismissed')=='true') {
-        {% include analytics.html %}        
+        {% include ga.js %}        
     } else {
         document.getElementById('cookie-notice').style.display = 'block';
     }
