--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
     --col-lowlight: #787e8b;
     --font-body: Tahoma, Arial, sans-serif;
     --font-slab: 'Arial Black', Tahoma, 'Avenir Next', Verdana, sans-serif;
-    --font-figure: Hack, Consolas, Menlo, Monaco, monospace;
     --img-featheight: 480px
 }
 
@@ -170,7 +169,7 @@ article a[href*="//"]:not([href*="paulfosterdesign.co.uk/"]):after {
 }
 
 code,pre,kbd {
-    font-family: var(--font-figure)
+    font-family: Hack, Consolas, Menlo, Monaco, monospace
 }
 
 p>code,kbd {
