--- a/assets/css/style-layout.css
+++ b/assets/css/style-layout.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1,h2 {
-    font-family: var(--font-slab, sans-serif);
+    font-family: 'Arial Black', Tahoma, 'Avenir Next', Verdana, sans-serif;
     text-transform: uppercase
 }
 
