--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                 
     <nav>
         <ul class="wrap-banner--nav flex--col flex--row list--nostyles h2">
-            <li class="flex--fifty wrap-banner--pfd"><a class="link__nav--home" href="/">paulfosterdesign</a></li>
+            <li class="flex--fifty wrap-banner--pfd"><a class="link__nav--home" href="/">Paul Foster Design</a></li>
             <li class="flex--auto flex--justifycenter"><a href="/work/">Work</a></li>
             <li class="flex--auto flex--justifycenter"><a href="/blog/">Blog</a></li>
             <li class="flex--auto flex--justifycenter"><a href="/about/">About</a></li>
