--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="http://chaitanyakr.github.io">About</a> 
+            <a href="http://ch4174nya.github.io">About</a>
                   <!-- link About to user site -->
           </nav>
         </header>
