--- a/_includes/socialicons.html
+++ b/_includes/socialicons.html
@@ -2,12 +2,12 @@
 
     <ul class="list--nostyles flex--row">
         <li>
-            <a href="https://twitter.com/plfstr/" rel="me">
+            <a href="https://twitter.com/plfstr" rel="me">
                 <svg role="img" class="icon icon--twitter"><use xlink:href="/assets/images/icons-social.svg#icon--twitter" viewBox="0 0 1024 1024"></use><title>Twitter</title></svg>
             </a>
         </li>
         <li>
-            <a href="https://codepen.io/plfstr/" rel="me">
+            <a href="https://codepen.io/plfstr" rel="me">
                 <svg role="img" class="icon icon--codepen"><use xlink:href="/assets/images/icons-social.svg#icon--codepen" viewBox="0 0 1024 1024"></use><title>CodePen</title></svg>
             </a>
         </li>
