--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="/assets/css/style.css">
 <link rel="stylesheet" href="/assets/css/style-layout.css" media="only screen and (min-width: 800px)">
 {% feed_meta %}
+<link rel="webmention" href="https://webmention.io/www.paulfosterdesign.co.uk/webmention">
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/assets/images/pfd-favicon.svg" sizes="any" type="image/svg+xml">
 <link rel="icon" href="/assets/images/pfd-webclip-196x196.jpg" sizes="196x196">
