--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,6 +2,8 @@
 <html lang="en-GB">
 <head>
 {% include meta.html %}
+<link rel="dns-prefetch" href="//blackandwhitesquares.com">
+<link rel="dns-prefetch" href="//www.tumblr.com">
 </head>
 <body>
 
