Codepen embed styles fallback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,12 @@ dt {
     line-height: 1
 }
 
+.codepen {
+    padding: .75rem;
+    font-family: Hack, Menlo, Monaco, monospace;
+    background-color: var(--col-secondary)
+}
+
 .cp_embed_wrapper,
 .figure__featimg {
     display: block;
