--- a/_includes/codepen.html
+++ b/_includes/codepen.html
@@ -1,4 +1,4 @@
-<p class="codepen" data-height="{{ include.height | default: 300 }}" data-theme-id="67" data-default-tab="{{ include.type | default: result }}" data-user="plfstr" data-slug-hash="{{ include.codepen | slice: -6, 6 }}" data-preview="true" data-pen-title="{{ page.title | default: plfstr Pen }}">
-  <span>See the Pen <a href="{{ include.codepen | default: https://codepen.io/plfstr }}">{{ page.title | default: plfstr Pen }}</a> by Paul (<a href="https://codepen.io/plfstr">@plfstr</a> on <a href="https://codepen.io" rel="noopener" target="_blank">CodePen</a>.</span>
+<p class="codepen" data-height="{{ include.height | default: 300 }}" data-theme-id="67" data-default-tab="{{ include.type | default: result }}" data-user="plfstr" data-slug-hash="{{ include.codepen }}" data-preview="true" data-pen-title="{{ page.title | default: plfstr Pen }}">
+  <span>See the Pen <a href="{{ include.codepen | prepend: https://codepen.io/plfstr/pen/ }}">{{ page.title | default: plfstr Pen }}</a> by Paul (<a href="https://codepen.io/plfstr">@plfstr</a> on <a href="https://codepen.io" rel="noopener" target="_blank">CodePen</a>.</span>
 </p>
 <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
