Icon aria labels

--- a/_includes/socialicons.html
+++ b/_includes/socialicons.html
@@ -3,17 +3,26 @@
     <ul class="list--nostyles flex--row">
         <li>
             <a href="https://twitter.com/plfstr" rel="me">
-                <svg role="img" class="icon icon--twitter"><use xlink:href="/assets/images/icons-social.svg#icon--twitter" viewBox="0 0 1024 1024"></use><title>Twitter</title></svg>
+                <svg focusable="false" aria-hidden="true" class="icon icon--twitter">
+                    <use xlink:href="/assets/images/icons-social.svg#icon--twitter" viewBox="0 0 1024 1024"></use>
+                </svg>
+                <span class="invisible">Twitter</span>
             </a>
         </li>
         <li>
             <a href="https://codepen.io/plfstr" rel="me">
-                <svg role="img" class="icon icon--codepen"><use xlink:href="/assets/images/icons-social.svg#icon--codepen" viewBox="0 0 1024 1024"></use><title>CodePen</title></svg>
+                <svg  focusable="false" aria-hidden="true" class="icon icon--codepen">
+                    <use xlink:href="/assets/images/icons-social.svg#icon--codepen" viewBox="0 0 1024 1024"></use>
+                </svg>
+                <span class="invisible">CodePen</span>
             </a>
         </li>
         <li>
             <a href="https://www.linkedin.com/in/paulfosterdesign" rel="me">
-                <svg role="img" class="icon icon--linkedin2"><use xlink:href="/assets/images/icons-social.svg#icon--linkedin2" viewBox="0 0 1024 1024"></use><title>LinkedIn</title></svg>
+                <svg focusable="false" aria-hidden="true" class="icon icon--linkedin2">
+                    <use xlink:href="/assets/images/icons-social.svg#icon--linkedin2" viewBox="0 0 1024 1024"></use>
+                </svg>
+                <span class="invisible">LinkedIn</span>
             </a>
         </li>
     </ul>
