--- a/_includes/postinfo.html
+++ b/_includes/postinfo.html
@@ -2,5 +2,5 @@
 <p><small>Posted <time class="dt-published" datetime="{{ page.date }}">{{ page.date | date: "%d/%m/%Y" }}</time></small></p>
 {% endif %}
 <footer>
-    <p class="invisible" aria-hidden="true"><small>&lsquo;<span class="p-name">{{ page.title }}</span>&rsquo; published by <a class="p-author u-url h-card" href="{{ page.url }}">Paul Foster</a> (www.paulfosterdesign.co.uk), a web designer / front-end developer, based in Cambridgeshire, UK.</small></p>
+    <p class="invisible" aria-hidden="true"><small>&lsquo;<a href="{{ page.url }}" class="p-name u-url">{{ page.title }}</a>&rsquo; published by <a href="https://www.paulfosterdesign.co.uk" class="p-author h-card">Paul Foster</a> (www.paulfosterdesign.co.uk), a web designer / front-end developer, based in Cambridgeshire, UK.</small></p>
 </footer>
