--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
+          <p class="site-description">{{ site.description }}</p>
           {% include svg-icons.html %}
         </footer>
       </div>
