--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Writing</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/links">Links</a>
+            <a href="{{ site.baseurl }}/bio">Bio</a>
           </nav>
         </header>
       </div>
