--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/links">Links</a>
-            <a href="{{ site.baseurl }}/bio">Bio</a>
+            <a href="{{ site.baseurl }}/links/">Links</a>
+            <a href="{{ site.baseurl }}/bio/">Bio</a>
           </nav>
         </header>
       </div>
