--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,12 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <h1>
+              <a href="{{ site.baseurl }}/">
+                <img src="/images/logo-removebg-preview.png" alt="Neil Chandarana logo" />
+              </a>
+            </h1>
+<!--            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>-->
             <p class="site-description">{{ site.description }}</p>
           </div>
 
