--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,14 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
+          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="/images/logo-removebg-preview.png" /></a>
           <div class="site-info">
-            <h1>
-              <a href="{{ site.baseurl }}/">
-                <img src="/images/logo-removebg-preview.png" alt="Neil Chandarana logo" />
-              </a>
-            </h1>
-<!--            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>-->
+<!--            <h1>-->
+<!--              <a href="{{ site.baseurl }}/">-->
+<!--                <img src="/images/logo-removebg-preview.png" alt="Neil Chandarana logo" />-->
+<!--              </a>-->
+<!--            </h1>-->
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
