update logo again

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="/images/logo-removebg-preview.png" /></a>
-          <div class="site-info">
+<!--          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="/images/logo-removebg-preview.png" /></a>-->
+<!--          <div class="site-info">-->
 <!--            <h1>-->
 <!--              <a href="{{ site.baseurl }}/">-->
 <!--                <img src="/images/logo-removebg-preview.png" alt="Neil Chandarana logo" />-->
