--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid;
 
   @include mobile {
     text-align: center;
@@ -197,7 +197,7 @@ img {
   font-family: merriweather,Georgia,Times,serif;
   font-weight: 300;
   font-size: 28px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 
 .site-description {
@@ -212,9 +212,9 @@ img {
 
 nav {
   float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: merriweather,Georgia,Times,serif;
-  font-size: 18px;
+  margin-top: 25px;  //@TODO: Vertically middle align
+  font-family: Helvetica;
+  font-size: 16px;
 
   @include mobile {
     float: none;
@@ -225,10 +225,10 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: $gray;
     text-align: right;
     font-weight: 300;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
 
     @include mobile {
       margin: 0 10px;
@@ -275,7 +275,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+ // background-color: $lightGray;
 }
 
 footer {
