--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/links/">Links</a>
+<!--            <a href="{{ site.baseurl }}/links/">Links</a>-->
             <a href="{{ site.baseurl }}/bio/">Bio</a>
           </nav>
         </header>
