--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 
         {% include header.html %}
 
-        <main id="content" class="wrap-content">
-            <article class="h-entry e-content">
+        <main id="content" class="wrap-content h-entry">
+            <article class="e-content">
                 
                 <h1>{{ page.title }}</h1>
 
