--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,18 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
 
-  <div class="date">
+  <div id="post_container">
+
+    <div id="meta1">
     {{ page.date | date: "%B %e, %Y" }}
+    </div>
+    <div id="meta2">
+    [{% for tag in page.tags %}
+      {% capture tag_name %}{{ tag }}{% endcapture %}
+      <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>#{{ tag_name }}</nobr></code>&nbsp;</a>
+    {% endfor %}]
+    </div>
+
   </div>
 
   <div class="entry">
