change css id to class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 
     <div id="main" role="main" class="container">
         {% if page.url == "/" %}
-        <div id="tagcloud">
+        <div class="tagcloud">
             {% include tagcloud.html %}
         </div>
         {% endif %}
