--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,12 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
 
-  <div id="post_container">
+  <div class="post_container">
 
-    <div id="meta1">
+    <div class="meta1">
     {{ page.date | date: "%B %e, %Y" }}
     </div>
-    <div id="meta2">
+    <div class="meta2">
     [{% for tag in page.tags %}
       {% capture tag_name %}{{ tag }}{% endcapture %}
       <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>#{{ tag_name }}</nobr></code>&nbsp;</a>
