tag and bio update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,11 +36,11 @@
     </div>
 
     <div id="main" role="main" class="container">
-        {% if page.url == "/" %}
-        <div class="tagcloud">
-            {% include tagcloud.html %}
-        </div>
-        {% endif %}
+<!--        {% if page.url == "/" %}-->
+<!--        <div class="tagcloud">-->
+<!--            {% include tagcloud.html %}-->
+<!--        </div>-->
+<!--        {% endif %}-->
       {{ content }}
     </div>
 
